# XRM

./: .gitignore  CMakeLists.txt  HER-1-bunch.mac  HER-N-bunches.mac  LER-1-bunch.mac  LER-N-bunches.mac  README.md  edit.sh  exampleB1.cc  go.sh  init_vis.mac  run2.mac  spectra.py  spectrum.gnuplot  vis.mac
include/: B1DetectorConstruction.hh  B1EventAction.hh  sensitiveObject.hh
predator/: .gitignore  IV.py  daemon.sh  flash_microcontroller.sh  get_temperatures.py  lights_off.sh  lights_on.sh  make_video.sh  read_serial.py  samd21_get_temperature.py  take_pic.sh  temperatures.gnuplot  temperatures.sh  upload_to_microcontroller.sh  upload_to_samd21.sh
predator/contrib/: code.py  get_temperatures.py
predator/microcontroller/: code.py  erase.py  light_follows_button.py  samd21_get_temperature.py
smu/: b2901a.py  control_smu.py
src/: B1DetectorConstruction.cc  B1EventAction.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc  B1SteppingAction.cc
